--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Did you know you can create diagrams, sequence diagrams etc through text directly in GitHub markdown using (mermaidjs)[https://docs.github.com/en/get-started/writing-on-github/working-with-advanced-formatting/creating-diagrams]?
+Did you know you can create diagrams, sequence diagrams etc through text directly in GitHub markdown using [mermaidjs](https://docs.github.com/en/get-started/writing-on-github/working-with-advanced-formatting/creating-diagrams)?
 
 For example, here is a simple flow chart:
 
